# compiler

./: .editorconfig  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  getting_started.html  index.html  mkdocs.yml  print.html  release-plz.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json
cargo-ext/: Cargo.toml  README.md
cargo-ext/src/: cli_commands.rs  commands.rs  compile.rs  lib.rs  main.rs  new_project.rs
cargo-ext/tests/: compile.rs  mod.rs  utils.rs
codegen/masm/: CHANGELOG.md  Cargo.toml  build.rs
codegen/masm/intrinsics/: i32.masm  i64.masm  mem.masm  u32.masm
codegen/masm/src/: convert.rs  emulator.rs  lib.rs  tests.rs
compiler-tests/: Cargo.toml
compiler-tests-rust-source/: Cargo.toml
compiler-tests-rust-source/src/: div_u.rs
compiler-tests/src/: comp_test.rs  exec_emulator.rs  exec_vm.rs  lib.rs
compiler-tests/src/rust_masm_tests/: mod.rs
diagnostics/: Cargo.toml
diagnostics-macros/: Cargo.toml
diagnostics-macros/src/: lib.rs
diagnostics/src/: codemap.rs  config.rs  diagnostic.rs  emitter.rs  filename.rs  handler.rs  lib.rs  source.rs  span.rs
frontend-wasm/: CHANGELOG.md  Cargo.toml  README.md
frontend-wasm/src/: code_translator.rs  config.rs  error.rs  func_translation_state.rs  func_translator.rs  function_builder_ext.rs  lib.rs  module_env.rs  module_translator.rs  sections_translator.rs  ssa.rs  test_utils.rs  translation_utils.rs  wasm_types.rs
frontend-wasm/src/code_translator/: mod.rs  tests.rs  tests_unsupported.rs
frontend-wasm/src/component/: build_ir.rs  dfg.rs  info.rs  inline.rs  instance.rs  mod.rs  parser.rs  translate.rs  translator.rs  types.rs
frontend-wasm/src/environ/: func_env.rs  mod.rs  module_env.rs
frontend-wasm/src/intrinsics/: felt.rs  mem.rs  mod.rs
frontend-wasm/src/miden_abi/: mod.rs  stdlib.rs  transform.rs  tx_kernel.rs
frontend-wasm/src/module/: build_ir.rs  environ.rs  func_env.rs  func_translation_state.rs  func_translator.rs  function_builder_ext.rs  instance.rs  mod.rs  module_env.rs  module_translation_state.rs  module_tratnslation_state.rs  sections_translator.rs  translate.rs  types.rs
frontend-wasm/src/module_translator/: tests.rs
frontend-wasm/tests/: test_rust_comp.rs
frontend-wasm/tests/expected/: add.hir  add.wat  array.hir  array.wat  dlmalloc.hir  dlmalloc.mir  dlmalloc.wat  enum.hir  enum.wat  fib.hir  fib.wat  signed_arith.mir  signed_arith.wat  static_mut.hir  static_mut.wat
frontend-wasm/tests/rust_source/: add.rs  array.rs  enum.rs  fib.rs  signed_arith.rs  static_mut.rs
hir/: CHANGELOG.md  Cargo.toml
hir-analysis/: CHANGELOG.md  Cargo.toml
hir-analysis/src/: control_flow.rs  data.rs  def_use.rs  dependency_graph.rs  dominance.rs  lib.rs  liveness.rs  loops.rs  spill.rs  treegraph.rs
hir-analysis/src/validation/: block.rs  function.rs  mod.rs  naming.rs  typecheck.rs
hir-macros/: CHANGELOG.md  Cargo.toml
hir-macros/src/: lib.rs  op.rs  operation.rs  spanned.rs
hir-parser/: Cargo.toml  README.md
hir-parser/src/: lib.rs
hir-parser/src/ast/: globals.rs
hir-parser/src/lexer/: mod.rs
hir-parser/src/parser/: grammar.lalrpop
hir-pass/: Cargo.toml
hir-pass/src/: lib.rs
hir-symbol/: CHANGELOG.md  Cargo.toml  build.rs
hir-symbol/src/: lib.rs  symbols.toml  sync.rs
hir-symbol/src/sync/: rw_lock.rs
hir-transform/: CHANGELOG.md  Cargo.toml
hir-transform/src/: cfg_to_scf.rs  inline_blocks.rs  lib.rs  spill.rs  split_critical_edges.rs  treeify.rs
hir-transform/src/adt/: mod.rs  scoped_map.rs
hir-type/: CHANGELOG.md  Cargo.toml
hir-type/src/: layout.rs  lib.rs
hir/src/: asm.rs  attribute.rs  block.rs  builder.rs  constants.rs  context.rs  dataflow.rs  display.rs  function.rs  globals.rs  ident.rs  immediates.rs  insert.rs  instruction.rs  layout.rs  lib.rs  locals.rs  module.rs  operation.rs  pass.rs  program.rs  region.rs  segments.rs  testing.rs  tests.rs  value.rs  write.rs
hir/src/adt/: mod.rs  smallmap.rs  smallordset.rs  smallset.rs  sparsemap.rs
hir/src/analysis/: dominance.rs  loops.rs
hir/src/asm/: assertions.rs  builder.rs  display.rs  events.rs  import.rs  isa.rs  mod.rs  stack.rs  utils.rs
hir/src/component/: interface.rs  mod.rs
hir/src/formatter/: document.rs  mod.rs  print.rs
hir/src/hir/: block.rs  display.rs  immediates.rs  tests.rs
hir/src/ops/: call.rs  cast.rs  mem.rs  mod.rs  primop.rs  ret.rs
hir/src/parser/: error.rs  grammar.lalrpop  mod.rs  (+1 more)
hir2/: Cargo.toml
hir2/src/: any.rs  attributes.rs  core.rs  demangle.rs  derive.rs  folder.rs  formatter.rs  hash.rs  ir.rs  lib.rs  matchers.rs  patterns.rs  unsafe_ref.rs
ir/: Cargo.toml
ir/src/: ast.rs  lib.rs  types.rs
miden-abi-conversion/: Cargo.toml
miden-abi-conversion/src/: lib.rs  tx_kernel.rs
midenc/: CHANGELOG.md  Cargo.toml
midenc-compile/: CHANGELOG.md  Cargo.toml
midenc-compile/src/: compiler.rs  lib.rs  stage.rs
midenc-debug/: CHANGELOG.md  Cargo.toml  README.md
midenc-debug/src/: cli.rs  config.rs  felt.rs  host.rs  inputs.rs  lib.rs  logger.rs
midenc-driver/: CHANGELOG.md  Cargo.toml
midenc-driver/src/: cli.rs  lib.rs  midenc.rs  options.rs
midenc-runner/: Cargo.toml  README.md
midenc-runner/src/: felt.rs  inputs.rs  lib.rs  run.rs  runner.rs
midenc-session/: CHANGELOG.md  Cargo.toml  build.rs
midenc-session/src/: color.rs  diagnostics.rs  duration.rs  emit.rs  emitter.rs  flags.rs  inputs.rs  lib.rs  libs.rs  outputs.rs  statistics.rs
midenc-tx-kernel/: Cargo.toml
midenc-tx-kernel/masm/: tx.masm
midenc-tx-kernel/src/: lib.rs
midenc/src/: main.rs
sdk/: .gitignore  Cargo.toml  README.md
sdk/alloc/: CHANGELOG.md  Cargo.toml  README.md
sdk/base-sys/: CHANGELOG.md  Cargo.toml  build.rs
sdk/prelude/: Cargo.toml  README.md
sdk/sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/src/: account.rs  asset.rs  call_conv.rs  felt.rs  lib.rs  note.rs  serialization.rs
sdk/stdlib-sys/: CHANGELOG.md  Cargo.toml  README.md
sdk/tx-kernel/: Cargo.toml
sdk/tx-kernel-sys/: CHANGELOG.md  Cargo.toml
sdk/types/: Cargo.toml
sdk/wit/: miden.wit
(+1059 files in other folders)
