[workspace]
resolver = "2"
members = [
  "codegen/*",
  "hir",
  "hir-analysis",
  "hir-macros",
  "hir-symbol",
  "hir-transform",
  "hir-type",
  "midenc",
  "midenc-compile",
  "midenc-driver",
  "midenc-session",
  "tools/*",
  "frontend-wasm",
  "tests/rust-apps/*",
  "tests/integration",
]
exclude = ["tests/rust-apps-wasm"]

[workspace.package]
version = "0.1.0"
rust-version = "1.71"
authors = ["Miden Team"]
description = "An intermediate representation and compiler for Miden Assembly"
repository = "https://github.com/0xPolygonMiden/miden-ir"
homepage = "https://github.com/0xPolygonMiden/miden-ir"
documentation = "https://github.com/0xPolygonMiden/miden-ir"
categories = ["Compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
bitflags = "1.3"
clap = { version = "4.1", features = ["derive", "env"] }
cranelift-entity = "0.100"
cranelift-bforest = "0.100"
env_logger = "0.9"
either = "1.9"
Inflector = "0.11"
intrusive-collections = "0.9"
inventory = "0.3"
log = "0.4"
paste = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
pretty_assertions = "1.0"
rustc-hash = "1.1"
smallvec = { version = "1.9", features = [
  "union",
  "const_generics",
  "const_new",
] }
smallstr = { version = "0.3", features = ["union"] }
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next" }
miden-core = { git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm", branch = "next" }
miden-codegen-masm = { path = "codegen/masm" }
miden-diagnostics = "0.1"
miden-hir = { path = "hir" }
miden-hir-analysis = { path = "hir-analysis" }
miden-hir-macros = { path = "hir-macros" }
miden-hir-symbol = { path = "hir-symbol" }
miden-hir-transform = { path = "hir-transform" }
miden-hir-type = { path = "hir-type" }
miden-parsing = "0.1"
miden-frontend-wasm = { path = "frontend-wasm" }
midenc-compile = { path = "midenc-compile" }
midenc-driver = { path = "midenc-driver" }
midenc-session = { path = "midenc-session" }
miden-integration-tests = { path = "tests/integration" }


[profile.dev]
lto = false
# Needed for 'inventory' to work
codegen-units = 1

[profile.release]
opt-level = 2
codegen-units = 1
lto = "thin"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
