[workspace]
resolver = "2"
members = [
    "codegen/*",
    "hir",
    "hir-analysis",
    "hir-macros",
    "hir-symbol",
    "hir-transform",
    "hir-type",
    "midenc",
    "midenc-compile",
    "midenc-driver",
    "midenc-session",
    "tools/*",
    "frontend-wasm",
    "tests/rust-apps/*",
    "tests/integration",
]
exclude = ["tests/rust-apps-wasm", "cargo-ext/tests/data"]

[workspace.package]
version = "0.0.0"
rust-version = "1.78"
authors = ["Miden contributors"]
description = "An intermediate representation and compiler for Miden Assembly"
repository = "https://github.com/0xPolygonMiden/compiler"
homepage = "https://github.com/0xPolygonMiden/compiler"
documentation = "https://github.com/0xPolygonMiden/compiler"
categories = ["compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.4"
clap = { version = "4.1", features = ["derive", "env"] }
cranelift-entity = "0.108"
cranelift-bforest = "0.108"
env_logger = "0.11"
either = { version = "1.10", default-features = false }
Inflector = "0.11"
intrusive-collections = "0.9"
inventory = "0.3"
log = "0.4"
miette = { version = "7.1.0", git = "https://github.com/bitwalker/miette", branch = "no-std" }
paste = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
petgraph = "0.6"
pretty_assertions = "1.0"
proptest = "1.4"
rustc-hash = "1.1"
smallvec = { version = "1.13", features = [
    "union",
    "const_generics",
    "const_new",
    "drain_filter",
] }
smallstr = { version = "0.3", features = ["union"] }
thiserror = { version = "1.0", git = "https://github.com/bitwalker/thiserror", branch = "no-std" }
toml = { version = "0.8", features = ["preserve_order"] }
derive_more = "0.99"
indexmap = "2.1"
# a993b72e3fd5d209e017461b62ef2054d9120f01 is the commit that sets the `v0.10.0`
# version to all the VM crates in the 'next' branch
miden-assembly = { version = "0.10", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "a993b72e3fd5d209e017461b62ef2054d9120f01" }
miden-core = { version = "0.10", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "a993b72e3fd5d209e017461b62ef2054d9120f01" }
miden-processor = { version = "0.10", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "a993b72e3fd5d209e017461b62ef2054d9120f01" }
miden-stdlib = { version = "0.10", git = "https://github.com/0xPolygonMiden/miden-vm", rev = "a993b72e3fd5d209e017461b62ef2054d9120f01" }
midenc-codegen-masm = { version = "0.0.1", path = "codegen/masm" }
miden-diagnostics = "0.1"
midenc-hir = { version = "0.0.1", path = "hir" }
midenc-hir-analysis = { version = "0.0.1", path = "hir-analysis" }
midenc-hir-macros = { version = "0.0.1", path = "hir-macros" }
midenc-hir-symbol = { version = "0.0.1", path = "hir-symbol" }
midenc-hir-transform = { version = "0.0.1", path = "hir-transform" }
midenc-hir-type = { version = "0.0.1", path = "hir-type" }
miden-parsing = "0.1"
midenc-frontend-wasm = { version = "0.0.1", path = "frontend-wasm" }
midenc-compile = { version = "0.0.1", path = "midenc-compile" }
midenc-driver = { version = "0.0.1", path = "midenc-driver" }
midenc-session = { version = "0.0.1", path = "midenc-session" }
miden-integration-tests = { version = "0.0.0", path = "tests/integration" }
wat = "1.0.69"
blake3 = "1.5"

[patch.crates-io]
thiserror = { git = "https://github.com/bitwalker/thiserror", branch = "no-std" }
miette = { git = "https://github.com/bitwalker/miette", branch = "no-std" }

[profile.dev]
lto = false
# Needed for 'inventory' to work
codegen-units = 1

[profile.release]
opt-level = 2
debug = true
codegen-units = 1
lto = "thin"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

# Build `expect-test` with release optimizations even in dev mode to speed up the diffing
[profile.dev.package.expect-test]
opt-level = 3

# Build `dissimilar` with release optimizations even in dev mode to speed up the diffing
[profile.dev.package.dissimilar]
opt-level = 3
