[package]
name = "cargo-miden"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true
autotests = false # disable autodiscovery of tests

[[bin]]
name = "cargo-miden"

[[test]]
name = "integration"
path = "tests/mod.rs"

[dependencies]
midenc-driver.workspace = true
midenc-session.workspace = true
miden-diagnostics.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]