[package]
name = "miden-compiler-tests-rust-source"
version = "0.1.0"
edition = "2021"

[dependencies]
dlmalloc = { version = "0.2.4", features = ["global"], optional = true}

[[bin]]
name = "dlmalloc_app"
path = "src/bin/dlmalloc_app.rs"
test = false
# Since we only need to build it in test to get the compiled Wasm for testing, we
# hide behind the artifical feature so that it only builds with this feature is specified
required-features = ["wasm-target"]

[[bin]]
name = "div_u_app"
path = "src/bin/div_u.rs"
test = false
# Since we only need to build it in test to get the compiled Wasm for testing, we
# hide behind the artifical feature so that it only builds with this feature is specified
required-features = ["wasm-target"]

[features]
wasm-target = []

# [profile.release]
# panic = 'abort'     # Abort on panic
# opt-level = 'z'     # Optimize for size
