[package]
name = "midenc-frontend-wasm"
description = "Build MidenIR from Wasm"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
miden-core.workspace = true
midenc-hir.workspace = true
midenc-hir-type.workspace = true
miden-diagnostics.workspace = true
thiserror.workspace = true
smallvec.workspace = true
log.workspace = true
anyhow.workspace = true
wasmparser = "0.118.1"
derive_more.workspace = true
indexmap.workspace = true
gimli = { version = "0.28.0", default-features = false, features = [
    'read',
    'std',
] }
rustc-hash.workspace = true

[dev-dependencies]
wat.workspace = true
expect-test = "1.4.1"
miden-integration-tests.workspace = true
