[package]
name = "midenc-frontend-wasm"
description = "Wasm frontend for the Miden compiler"
version = "0.0.1"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
addr2line = "0.23"
derive_more.workspace = true
gimli = { version = "0.30", default-features = false, features = [
    'read',
    'std',
] }
indexmap.workspace = true
log.workspace = true
miden-core.workspace = true
midenc-hir.workspace = true
midenc-hir-type.workspace = true
miden-diagnostics.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasmparser = "0.118.1"

[dev-dependencies]
wat.workspace = true
expect-test = "1.4.1"
miden-integration-tests.workspace = true
