[package]
name = "miden-hir-analysis"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cranelift-entity.workspace = true
cranelift-bforest.workspace = true
inventory.workspace = true
miden-diagnostics.workspace = true
miden-hir.workspace = true
miden-hir-pass.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
