[package]
name = "midenc-hir-analysis"
description = "Analysis passes and utilties for Miden HIR"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cranelift-entity.workspace = true
cranelift-bforest.workspace = true
inventory.workspace = true
intrusive-collections.workspace = true
miden-diagnostics.workspace = true
midenc-hir.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
