[package]
name = "midenc-hir-macros"
description = "Provides proc macro support for Miden IR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = { version = "0.20", features = ["diagnostics"] }
Inflector.workspace = true
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full", "parsing", "derive", "extra-traits", "printing"]
