[package]
name = "midenc-hir-symbol"
description = "String interning for the Miden compiler"
version = "0.0.5"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = []
serde = ["dep:bitcode", "dep:serde"]

[dependencies]
bitcode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[build-dependencies]
Inflector.workspace = true
rustc-hash.workspace = true
toml.workspace = true
