[package]
name = "midenc-hir-symbol"
description = "String interning for the Miden compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[build-dependencies]
Inflector.workspace = true
rustc-hash.workspace = true
toml.workspace = true
