[package]
name = "miden-hir-transform"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
inventory.workspace = true
miden-diagnostics.workspace = true
miden-hir.workspace = true
miden-hir-analysis.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
