[package]
name = "midenc-hir-transform"
description = "Transformation passes and utilities for Miden HIR"
version = "0.0.1"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
inventory.workspace = true
midenc-hir.workspace = true
midenc-hir-analysis.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
