[package]
name = "midenc-hir-type"
description = "Type system and utilities for Miden HIR"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
smallvec.workspace = true
