[package]
name = "midenc-hir-type"
description = "Type system and utilities for Miden HIR"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_repr"]

[dependencies]
miden-formatting.workspace = true
smallvec.workspace = true
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
