[package]
name = "miden-hir"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }

[dependencies]
anyhow.workspace = true
either.workspace = true
cranelift-entity.workspace = true
intrusive-collections.workspace = true
inventory.workspace = true
lalrpop-util = "0.20"
miden-core.workspace = true
miden-assembly.workspace = true
miden-diagnostics.workspace = true
miden-hir-symbol.workspace = true
miden-hir-type.workspace = true
miden-hir-macros.workspace = true
miden-parsing.workspace = true
midenc-session.workspace = true
num-bigint = "0.4"
num-traits = "0.2"
petgraph.workspace = true
paste.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
typed-arena = "2.0"
unicode-width = { version = "0.1", features = ["no_std"] }
winter-math = { version = "0.7", default-features = false }
derive_more.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
