[package]
name = "midenc-hir"
description = "High-level Intermediate Representation for Miden Assembly"
version = "0.0.1"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = []

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }

[dependencies]
anyhow.workspace = true
either.workspace = true
cranelift-entity.workspace = true
intrusive-collections.workspace = true
inventory.workspace = true
lalrpop-util = "0.20"
miden-core.workspace = true
miden-assembly.workspace = true
miden-diagnostics.workspace = true
midenc-hir-symbol.workspace = true
midenc-hir-type.workspace = true
midenc-hir-macros.workspace = true
miden-parsing.workspace = true
midenc-session.workspace = true
num-bigint = "0.4"
num-traits = "0.2"
petgraph.workspace = true
paste.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
typed-arena = "2.0"
unicode-width = { version = "0.1", features = ["no_std"] }
derive_more.workspace = true
indexmap.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
