[package]
name = "miden-ir"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
cranelift-entity = "0.95"
cranelift-bforest = "0.95"
intrusive-collections = "0.9"
miden-diagnostics.workspace = true
paste = "1.0"
smallvec.workspace = true
thiserror.workspace = true
typed-arena = "2.0"
miden-assembly = { git = "https://github.com/0xpolygonmiden/miden-vm", member = "assembly", branch = "next" }
miden-core = { git = "https://github.com/0xpolygonmiden/miden-vm", member = "core", branch = "next" }
winter-utils = { version = "0.6", default-features = false }

[dev-dependencies]
pretty_assertions.workspace = true
