[package]
name = "miden-ir"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
cranelift-entity = "0.95"
cranelift-bforest = "0.95"
intrusive-collections = "0.9"
miden-diagnostics = { path = "../diagnostics" }
paste = "1.0"
smallvec.workspace = true
thiserror.workspace = true
typed-arena = "2.0"

[dev-dependencies]
pretty_assertions.workspace = true
