[package]
name = "midenc-compile"
description = "The compiler frontend for Miden"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
inventory.workspace = true
miden-assembly.workspace = true
midenc-codegen-masm.workspace = true
miden-diagnostics.workspace = true
midenc-frontend-wasm.workspace = true
midenc-hir.workspace = true
midenc-hir-analysis.workspace = true
midenc-hir-transform.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
wat.workspace = true
