[package]
name = "midenc-debug"
description = "An interactive debugger for Miden VM programs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
glob = "0.3.1"
miden-assembly.workspace = true
miden-core.workspace = true
miden-processor.workspace = true
miden-stdlib.workspace = true
midenc-session.workspace = true
midenc-codegen-masm.workspace = true
midenc-hir.workspace = true
thiserror.workspace = true
toml.workspace = true
proptest.workspace = true
serde.workspace = true
ratatui = "0.28.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tui-input = "0.10"
tokio.workspace = true
tokio-util.workspace = true
futures = "0.3.30"
signal-hook = "0.3.17"
syntect = { version = "5.2.0", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "yaml-load",
    "regex-onig",
] }
