[package]
name = "midenc-driver"
description = "The compiler frontend for Miden"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
clap.workspace = true
log.workspace = true
inventory.workspace = true
miden-assembly.workspace = true
miden-codegen-masm.workspace = true
miden-diagnostics.workspace = true
miden-frontend-wasm.workspace = true
miden-hir.workspace = true
miden-hir-transform.workspace = true
midenc-session.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
