[package]
name = "midenc-driver"
description = "The driver for midenc, the Miden compiler"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
midenc-hir.workspace = true
midenc-session.workspace = true
midenc-compile.workspace = true
thiserror.workspace = true
