[package]
name = "midenc-driver"
description = "The driver for midenc, the Miden compiler"
version = "0.0.5"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["all"]
all = ["std", "debug"]
debug = ["dep:midenc-debug"]
std = ["alloc", "log/std", "clap/std", "clap/color", "clap/env"]
alloc = ["clap/help", "clap/usage", "clap/error-context", "clap/suggestions"]

[dependencies]
clap.workspace = true
log.workspace = true
midenc-hir.workspace = true
midenc-session.workspace = true
midenc-compile.workspace = true
midenc-debug = { workspace = true, optional = true }
thiserror.workspace = true
