[package]
name = "midenc-runner"
description = "The Miden VM executor that implements midenc run"
version = "0.0.1"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-processor.workspace = true
miden-stdlib.workspace = true
midenc-session.workspace = true
midenc-codegen-masm.workspace = true
midenc-hir.workspace = true
thiserror.workspace = true
proptest.workspace = true
